<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/first_gradient_blue_light_dark">

<!--    <io.alterac.blurkit.BlurLayout-->
<!--        android:id="@+id/welcomeOneBlur"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:blk_fps="0"-->
<!--        app:blk_blurRadius="20"-->
<!--        app:blk_cornerRadius="1dp"-->
<!--        app:blk_downscaleFactor="0.5"-->
<!--        />-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@drawable/hammer"
            android:contentDescription="@string/welcome_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_1_title"
            android:textColor="@color/whiteLight"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_bold"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_1_desc"
            android:textAlignment="center"
            android:textColor="@color/whiteLight"
            android:textSize="@dimen/slide_desc"
            tools:ignore="SpUsage" />

    </LinearLayout>
</RelativeLayout>