<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        android:id="@+id/recentPostCardView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/whiteDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recentPostImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/post_picture"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/iphone"/>

            <TextView
                android:id="@+id/recentPostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:text="@string/new_laws"
                android:textSize="14sp"
                android:fontFamily="@font/opensans_bold"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/recentPostBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="11sp"
                android:text="@string/here_are_the_newly" />



        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
